[gd_scene load_steps=10 format=3 uid="uid://don57gcmelnw0"]

[ext_resource type="Script" path="res://Player/PlayerScripts/player.gd" id="1_q3p7k"]
[ext_resource type="PackedScene" uid="uid://dww2j48scdj0j" path="res://Player/Guns/pistol.tscn" id="2_2m6dt"]
[ext_resource type="Shader" path="res://Player/Shaders/crt.gdshader" id="3_v241u"]
[ext_resource type="Script" path="res://Player/PlayerScripts/FrameDisplay.gd" id="4_pqhk8"]
[ext_resource type="Script" path="res://Player/PlayerScripts/Bullet.gd" id="5_ulbik"]
[ext_resource type="Texture2D" uid="uid://dp5be5ow7n6rs" path="res://icon.svg" id="6_ldk7e"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rkopt"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_a73uh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lwur1"]
shader = ExtResource("3_v241u")
shader_parameter/crt_brightness = 3.0
shader_parameter/crt_ghost = 2.0
shader_parameter/crt_grid = 0.4
shader_parameter/crt_white_noise = 0.1
shader_parameter/crt_curve = 0.05
shader_parameter/hurt_intensity = 0.0

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_q3p7k")
mouse_sensitivity = 0.003
lean_angle = 2.0

[node name="Head" type="Node3D" parent="."]

[node name="CeilingChecks" type="Node3D" parent="Head"]

[node name="CeilingCheckRay" type="RayCast3D" parent="Head/CeilingChecks"]
visible = false
target_position = Vector3(0, 1.2, 0)

[node name="CeilingCheckRay2" type="RayCast3D" parent="Head/CeilingChecks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.4)
target_position = Vector3(0, 1.2, 0)

[node name="CeilingCheckRay3" type="RayCast3D" parent="Head/CeilingChecks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0, 0)
target_position = Vector3(0, 1.2, 0)

[node name="CeilingCheckRay4" type="RayCast3D" parent="Head/CeilingChecks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0, 0)
target_position = Vector3(0, 1.2, 0)

[node name="CeilingCheckRay5" type="RayCast3D" parent="Head/CeilingChecks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.4)
target_position = Vector3(0, 1.2, 0)

[node name="space_check_ray1" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
target_position = Vector3(0, 0, -1)

[node name="space_check_ray2" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
target_position = Vector3(0, 0, -1)

[node name="space_check_ray3" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
target_position = Vector3(0, 0, -1)

[node name="LedgeRayLow" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -1.5)

[node name="LedgeRayHigh" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
target_position = Vector3(0, 0, -1.5)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
current = true

[node name="Gun" type="Node3D" parent="Head/Camera3D" groups=["Player"]]

[node name="Pistol" parent="Head/Camera3D/Gun" instance=ExtResource("2_2m6dt")]

[node name="HeadRays" type="Node3D" parent="Head"]

[node name="RayLeft" type="RayCast3D" parent="Head"]
target_position = Vector3(-0.6, 0, 0)

[node name="RayRight" type="RayCast3D" parent="Head"]
target_position = Vector3(0.6, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_rkopt")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_a73uh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_lwur1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 104.0
offset_bottom = 72.0
script = ExtResource("4_pqhk8")

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 56.0
offset_top = 584.0
offset_right = 184.0
offset_bottom = 647.0
script = ExtResource("5_ulbik")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(574, 324)
scale = Vector2(-0.08, -0.052)
texture = ExtResource("6_ldk7e")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="RayCheckStairsUp" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.8)

[node name="RayCheckStairsDown" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, -0.5, 0)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
